# CUDA_RSP

./: CMakeLists.txt  run_rsp.sh
src/: main.cu  main.cu.backup  main_batch.cu
src/cuda_utils/: CMakeLists.txt  cuda_utils.hpp
src/data_types/: CMakeLists.txt  datatypes.cpp  datatypes.cu  datatypes.cuh
src/doa_processing/: CMakeLists.txt  doa_processing.cu  doa_processing.cuh
src/ego_estimation/: CMakeLists.txt  ego_estimation.cu  ego_estimation.cuh
src/ghost_removal/: CMakeLists.txt  ghost_removal.cu  ghost_removal.cuh
src/mimo_synthesis/: CMakeLists.txt  batch_mimo_synthesis.cu  batch_mimo_synthesis.cuh  mimo_synthesis.cu  mimo_synthesis.cuh
src/peak_detection/: CMakeLists.txt  batch_peak_detection.cu  batch_peak_detection.cuh  peak_detection.cu
src/preprocessing/: CMakeLists.txt  batch_fft_processing.cu  batch_fft_processing.cuh  fft_processing.cu
src/rcs/: CMakeLists.txt  rcs.cu  rcs.cuh
src/target_processing/: CMakeLists.txt  target_processing.cu  target_processing.cuh
